--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -34,33 +34,40 @@
         android:layout_marginTop="24dp"
         android:background="@color/gray_eeeeeee" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="8dp"
-        android:paddingTop="14dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="14dp">
+        android:paddingTop="5dp"
+        android:paddingEnd="5dp"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp">
 
-        <Button
-            android:id="@+id/bt_gray"
-            android:layout_width="106dp"
-            android:layout_height="36dp"
-            android:background="@drawable/button_gray_background"
-            android:gravity="center"
-            android:text="@string/m18_confirm"
-            android:textColor="@color/color_text_66" />
 
-        <Button
-            android:id="@+id/bt_red"
-            android:layout_width="106dp"
+
+        <TextView
+            android:id="@+id/bt_cancel"
+            android:layout_width="0dp"
             android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/button_red_background"
             android:gravity="center"
             android:text="@string/m16_cancel"
-            android:textColor="@color/white" />
+            android:layout_weight="1"
+            android:textColor="@color/color_text_66" />
 
-    </RelativeLayout>
+        <View
+            android:layout_width="@dimen/dp_1"
+            android:background="@color/gray_eeeeeee"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/bt_confirm"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/m18_confirm"
+            android:textColor="@color/color_app_main_pressed" />
+
+    </LinearLayout>
 
 </LinearLayout>
