--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -45,7 +45,7 @@
             app:layout_constraintTop_toBottomOf="@+id/status_bar" />
 
 
-        <ImageView
+        <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
