--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -112,7 +112,7 @@
                             android:layout_margin="@dimen/dp_10"
                             android:background="@drawable/setting_layer"
                             android:padding="@dimen/dp_5"
-                            android:text="ACBDEFG"
+                            android:minWidth="@dimen/dp_80"
                             android:textColor="@color/white"
                             android:textSize="@dimen/size_content_sp_14"
                             android:textStyle="bold"
