--- a/app/src/main/res/layout/add_your_charge.xml
+++ b/app/src/main/res/layout/add_your_charge.xml
@@ -38,11 +38,45 @@
         android:id="@+id/et_sn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_60"
-        android:layout_margin="@dimen/dp_30"
+        android:layout_marginStart="@dimen/dp_30"
+        android:layout_marginEnd="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
         android:gravity="center"
         android:background="@drawable/shape_stroke_gradient"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_registered" />
+
+
+
+    <TextView
+        android:id="@+id/tv_pin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_30"
+        android:layout_marginEnd="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
+        android:padding="@dimen/dp_5"
+        android:text="@string/m184_pin"
+        android:textColor="@color/color_text_66"
+        android:textSize="@dimen/size_content_sp_14"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_sn" />
+
+
+    <EditText
+        android:id="@+id/et_pin"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_60"
+        android:layout_marginStart="@dimen/dp_30"
+        android:layout_marginEnd="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
+        android:gravity="center"
+        android:background="@drawable/shape_stroke_gradient"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_pin" />
+
+
 
 
     <Button
@@ -59,7 +93,7 @@
         android:textSize="@dimen/size_content_sp_12"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_sn" />
+        app:layout_constraintTop_toBottomOf="@+id/et_pin" />
 
 
     <LinearLayout
