--- a/lib/src/main/res/values/colors.xml
+++ b/lib/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">#59ad51</color>
+    <color name="colorPrimaryDark">#59ad51</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="black">#000</color>
+
+
     <color name="toast_bg">#aa000000</color>
     <color name="white">#ffffff</color>
 
