--- a/app/src/main/res/layout/activity_ble_set_param.xml
+++ b/app/src/main/res/layout/activity_ble_set_param.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <com.shuoxd.lib.view.StatusBarHeightView
@@ -14,14 +14,33 @@
 
     <com.shuoxd.charge.view.TitleBarLayout
         android:id="@+id/title_bar"
-        app:titleText="@string/m38_setting"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:titleText="@string/m38_setting" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rlv_params"
+    <TextView
+        android:id="@+id/tv_chargeId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/black_333333"
+        android:textSize="@dimen/size_content_sp_12" />
+
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/srlPull"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rlv_params"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
