--- a/app/src/main/res/layout/activity_ble_set_param.xml
+++ b/app/src/main/res/layout/activity_ble_set_param.xml
@@ -26,8 +26,9 @@
         android:background="@color/white"
         android:gravity="center"
         android:padding="@dimen/dp_10"
+        android:textStyle="bold"
         android:textColor="@color/black_333333"
-        android:textSize="@dimen/size_content_sp_12" />
+        android:textSize="@dimen/size_title_sp_16" />
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
